--- a/Projects/CrossOver/CrossOver.Web/Views/News/Create.cshtml
+++ b/Projects/CrossOver/CrossOver.Web/Views/News/Create.cshtml
@@ -20,6 +20,15 @@
             </div>
         </div>
     </div>
+    <div class="form-group">
+        <label class="control-label ">Image Tile</label>
+        <div class="row">
+            <div class="col-sm-8">
+                @Html.TextBoxFor(m => m.ImageTile, new { @class = "form-control" })
+            </div>
+        </div>
+    </div>
+    
 
     <div class="form-group">
         <label class="control-label">News Content</label>
