--- a/Projects/CrossOver/CrossOver.Web/Views/News/Edit.cshtml
+++ b/Projects/CrossOver/CrossOver.Web/Views/News/Edit.cshtml
@@ -23,6 +23,14 @@
     </div>
 
     <div class="form-group">
+        <label class="control-label ">Image Tile</label>
+        <div class="row">
+            <div class="col-sm-8">
+                @Html.TextBoxFor(m => m.ImageTile, new { @class = "form-control" })
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label">News Content</label>
         <div>
             @Html.EditorFor(m => m.FormattedContent, new { @class = "form-control" })
