--- a/Projects/CrossOver/CrossOver.Web/Views/News/Index.cshtml
+++ b/Projects/CrossOver/CrossOver.Web/Views/News/Index.cshtml
@@ -20,8 +20,8 @@
 { 
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="http://ichef.bbci.co.uk/news/625/media/images/81947000/jpg/_81947552_992cc258-b5a2-4ab3-8bcc-4be889073d34.jpg" 
-                 alt="100%x200" style="height: 200px; width: 100%; display: block;" 
+            <img src="@item.ImageTile" 
+                 alt="100%x200" class="imageTile" 
                  data-holder-rendered="true">
             <div class="caption">
                 <h3 >@Html.DisplayFor(modelItem => item.Title)
@@ -33,14 +33,14 @@
                 </p>
                 <p class="clearfix"></p>
 
-                <div style="max-height: 200px; overflow:hidden; text-overflow:ellipsis; ">
+                <div class="newsSummary">
                     @Html.Raw(item.FormattedContent)
                 </div>
                    
                     <p>
-                        @Html.ActionLink("Read", "Details", new { id = item.ArticleId }, new { @class = "btn btn-default" }) .
-                        @Html.ActionLink("Edit", "Edit", new { id = item.ArticleId }, new { @class = "btn btn-warning" }) .
-                        @Html.ActionLink("Delete", "Delete", new { id = item.ArticleId }, new { @class = "btn btn-danger" })
+                        @Html.ActionLink("Read", "Details", new { id = item.ArticleId }, new { @class = "btn btn-default btn-xs" }) *
+                        @Html.ActionLink("Edit", "Edit", new { id = item.ArticleId }, new { @class = "btn btn-warning btn-xs" }) *
+                        @Html.ActionLink("Delete", "Delete", new { id = item.ArticleId }, new { @class = "btn btn-danger btn-xs" })
                     </p>
                 </div>
         </div>
